@@ -1,3 +1,4 @@
+26. May  2013 - amo -  FXWorkbenchHandler, prepared for OnShow, OnHide annotation usage
 06. May  2013 - amo -  FXAction, changes due to changes in Action interface
 06. May  2013 - amo -  FXComponentCoordinator: fixed bug with local/global messages
 02. May  2013 - amo -  FXWorkbenchHandler: fixed bug with empty perspectives
